--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -136,11 +136,18 @@
 	.contact-header {
 		font-size: 1.5rem;
 	}
+
+	.contact-divider svg {
+		height: 75px;
+	}
 }
 
 @media only screen and (max-width: 550px) {
 	.form-container {
 		min-width: 25rem;
+	}
+	.contact-divider svg {
+		height: 50px;
 	}
 }
 
